--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,13 +1,7 @@
+# this document declares the real requirements for this project
 Django==1.5.1
 Fabric==1.6.1
 South==0.8.1
-argparse==1.2.1
 -e git://github.com/magnet-cl/artichoke.git@1f29af679e5d1133eec0557e19eb06b30ca7f50a#egg=artichoke-dev
-distribute==0.6.45
-django-appconf==0.6
 django-compressor==1.3
 ipython==0.13.2
-paramiko==1.10.1
-pycrypto==2.6
-six==1.3.0
-wsgiref==0.1.2
