--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -5,3 +5,5 @@ South==0.8.1
 -e git://github.com/magnet-cl/artichoke.git@1f29af679e5d1133eec0557e19eb06b30ca7f50a#egg=artichoke-dev
 django-compressor==1.3
 ipython==0.13.2
+django-admin-bootstrapped==0.4.1
+pyjade==2.0.2
