--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,10 +1,11 @@
 # this document declares the real requirements for this project
-Django==1.5.1
-Fabric==1.6.1
-South==0.8.1
+Django==1.5.4
+Fabric==1.8.0
+South==0.8.2
 -e git://github.com/magnet-cl/artichoke.git@1f29af679e5d1133eec0557e19eb06b30ca7f50a#egg=artichoke-dev
 django-compressor==1.3
-ipython==0.13.2
-django-admin-bootstrapped==0.4.1
-pyjade==2.0.2
+ipython==1.1.0
+bootstrap-admin==0.2.5
+pyjade==2.0.3
 recaptcha-client==1.0.6
+django-tables2==0.14.0
