--- a/base/static/bower.json
+++ b/base/static/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "bootstrap-datepicker": "~1.2.0",
-    "chosen": "https://github.com/harvesthq/chosen/releases/download/1.0.0/chosen_v1.0.0.zip",
+    "select2": "~3.4.3",
     "bootstrap": "~3.0.0",
     "html5shiv": "~3.7.0",
     "respond": "~1.3.0"
