name and homepage on bower.json are now replaced with project's name

--- a/base/static/bower.json
+++ b/base/static/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "treid",
+  "name": "NAME",
   "version": "0.0.0",
-  "homepage": "https://github.com/alealmuna/treid",
+  "homepage": "HOMEPAGE",
   "authors": [
     "Ignacio Munizaga <ignacio.munizaga.t@gmail.com>"
   ],
