--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "select2": "~3.4.5",
     "bootstrap": "~3.0.0",
     "html5shiv": "~3.7.0",
-    "respond": "~1.3.0"
+    "respond": "~1.3.0",
+    "jquery": "~2.1.0"
   }
 }
