--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "bootstrap-datepicker": "~1.2.0",
     "select2": "~3.4.5",
-    "bootstrap": "~3.0.0",
+    "bootstrap": "~3.2.0",
+    "html5shiv": "~3.7.0",
     "respond": "~1.3.0",
     "jquery": "~2.1.0"
   },
