--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -5,8 +5,8 @@ South==0.8.4
 -e git://github.com/magnet-cl/artichoke.git@1f29af679e5d1133eec0557e19eb06b30ca7f50a#egg=artichoke-dev
 bootstrap-admin==0.3.0
 django-compressor==1.3
-django-tables2==0.15.0
 ipython==1.2.1
 pyjade==2.1.0
 recaptcha-client==1.0.6
 django-form-utils==1.0.1
+django-debug-toolbar==1.2.2
