--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "wikirin",
-  "version": "0.2.0",
+  "name": "NAME",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:magnet-cl/wikirin.git"
+    "url": "HOMEPAGE"
   },
   "author": "Magnet S.P.A.",
   "dependencies": {
