--- a/bower.json
+++ b/bower.json
@@ -15,15 +15,15 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-datepicker": "~1.2.0",
-    "select2": "~3.4.5",
-    "bootstrap": "~3.2.0",
-    "respond": "~1.3.0",
-    "jquery": "~2.1.0",
-    "font-awesome": "~4.2.0"
+    "bootstrap": "~3.3.4",
+    "bootstrap-datepicker": "~1.4.0",
+    "font-awesome": "~4.3.0",
+    "jquery": "~2.1.3",
+    "select2": "~3.5.2",
+    "respond": "~1.3.0"
   },
   "resolutions": {
     "jquery": "~2.1.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.3.4"
   }
 }
