Update Django requirement to 1.8.4

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "NAME",
+  "name": "django-project-template",
   "version": "0.1.0",
   "repository": {
     "type": "git",
-    "url": "HOMEPAGE"
+    "url": "https://bitbucket.org/magnet-cl/django-project-template"
   },
   "author": "Magnet S.P.A.",
   "dependencies": {
