--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "NAME",
+  "name": "django-project-template",
   "version": "0.1.0",
-  "homepage": "HOMEPAGE",
+  "homepage": "https://bitbucket.org/magnet-cl/django-project-template",
   "authors": [
     "Ignacio Munizaga <ignacio.munizaga.t@gmail.com>"
   ],
@@ -15,15 +15,16 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.4",
+    "bootstrap": "3.3.5",
     "bootstrap-datepicker": "~1.4.0",
     "font-awesome": "~4.3.0",
-    "jquery": "~2.1.3",
-    "select2": "~3.5.2",
+    "jquery": "2.1.3",
+    "select2": "4.0.0",
     "respond": "~1.3.0"
   },
   "resolutions": {
-    "jquery": "~2.1.0",
-    "bootstrap": "~3.3.4"
+    "jquery": "2.1.3",
+    "bootstrap": "3.3.5",
+    "select2": "4.0.0"
   }
 }
