--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,6 @@
   },
   "resolutions": {
     "jquery": "2.1.3",
-    "bootstrap": "3.3.5",
-    "select2": "4.0.0"
+    "bootstrap": "3.3.5"
   }
 }
