Set uid and gid on gunicorn service configuration

--- a/fabfile/templates/django.conf
+++ b/fabfile/templates/django.conf
@@ -4,4 +4,6 @@ start on runlevel [2345]
 stop on runlevel [06]
 respawn
 respawn limit 10 5
+setuid %(user)s
+setgid %(user)s
 exec %(gunicorn_script)s
