--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "font-awesome": "~4.3.0",
     "jquery": "2.1.3",
     "select2": "4.0.0",
-    "respond": "~1.3.0",
-    "bootstrap-material-design": "~0.3.0"
+    "respond": "~1.3.0"
   },
   "resolutions": {
     "jquery": "2.1.3",
