--- a/fabfile/templates/nginx_site.conf
+++ b/fabfile/templates/nginx_site.conf
@@ -1,4 +1,11 @@
 server {
+  listen 80 default_server;
+  server_name _;
+
+  return 444;
+}
+
+server {
   listen 80;
   server_name %(domain)s www.%(domain)s;
 
